# spellchecker

./: .gitignore  Cargo.toml
benches/: bench_spell_check_file.rs  bench_spell_check_string.rs
examples/: repl.rs
src/: lib.rs  spellcheck.rs
