[package]
name = "spellcheck"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = "1"
serde = "1"
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }


[[bench]]
name = "bench_spell_check_file"
harness = false

[[bench]]
name = "bench_spell_check_string"
harness = false
