[package]
name = "spellcheck"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = "1"
serde = "1"
serde_json = "1"
cachers = { git = "https://github.com/OwenPendrighElliott/cachers.git" }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }


[[bench]]
name = "bench_spell_check_file"
harness = false

[[bench]]
name = "bench_spell_check_string"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
